@@ -21,13 +21,20 @@
 
 if (!isset($forMods)) exit('Module not found');
 
-$content_id = fmcontent_CleanVars($_REQUEST, 'id', 0, 'int');
+// Initialize content handler
+$content_handler = xoops_getmodulehandler('page', 'fmcontent');$topic_handler = xoops_getmodulehandler('topic', 'fmcontent');
+
+if(isset($_REQUEST['id'])) {
+	$content_id = fmcontent_CleanVars ( $_REQUEST, 'id', 0, 'int' );
+} else {
+	$content_alias = fmcontent_CleanVars ( $_REQUEST, 'page', 0, 'string' );
+	if($content_alias) {
+		$content_id = $content_handler->getId($content_alias);
+	}
+}
 
 // Initialize template
 $xoopsTpl = new XoopsTpl();
-// Initialize content handler
-$content_handler = xoops_getmodulehandler('page', 'fmcontent');
-$topic_handler = xoops_getmodulehandler('topic', 'fmcontent');
 
 $obj = $content_handler->get($content_id);
 
